Revision history for perl distribution Mojo-Redis

3.00 Not Released
 - Started on a new version to replace Mojo::Redis2 and the old Mojo::Redis
 - Add connection pool
 - Add Mojo::Redis::Cursor
 - Add Mojo::Redis::Database
 - Add Mojo::Redis::PubSub
 - Add Mojo::Redis::Transaction