@@ -2,6 +2,7 @@ Revision history for perl distribution Mojo-Redis
 
 3.00 Not Released
  - Started on a new version to replace Mojo::Redis2 and the old Mojo::Redis
+ - Mojo::Redis as EXPERIMENTAL
  - Add connection pool
  - Add Mojo::Redis::Cursor
  - Add Mojo::Redis::Database
